--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -2,8 +2,8 @@
 
 % \begin{abstract}
 %     Content of the abstract: \begin{itemize}
-%         \item Motivating Self-Adaptive Systems and their need for optimization.
-%         \item Motivating the need for a classification of optimization approaches for Self-Adaptive Systems.
+%         \item Motivating \acrlong{sas}[s] and their need for optimization.
+%         \item Motivating the need for a classification of \acrlong{oa}es for \acrlong{sas}[s].
 %         \item The scope and goal of this paper.
 %     \end{itemize}
 % \end{abstract}
@@ -11,11 +11,11 @@
 \begin{abstract}
     \textbf{Abstract} \ \ The complexity of modern software systems is constantly growing.
     This requires new ways to be found to better manage large scale software systems.
-    Self-Adaptive Systems which autonomously manage themselves using well-defined rules
+    \acrlong{sas}[s] which autonomously manage themselves using well-defined rules
     are a solution to this problem.
     Even tough these systems are able to adapt themselves,
     they struggle with unpredicted changes in their context.
-    This can be solved by using Optimization Approaches for Self-Adaptive Systems which can optimize these systems.
-    There are already many Optimization Approaches, but no way to classify them.
-    This paper proposes a classification for Optimization Approaches for Self-Adaptive Systems.
+    This can be solved by using \acrlong{oa}[es] for \acrlong{sas}[s] which can optimize these systems.
+    There are already many \acrlong{oa}[es], but no way to classify them.
+    This paper proposes a classification for \acrlong{oa}[es] for \acrlong{sas}[s].
 \end{abstract}
