--- a/sections/existing.tex
+++ b/sections/existing.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Classifying Existing Optimization Approaches}
 \label{ch:Existing}
 
@@ -32,7 +31,7 @@ and does not directly affect the learning cycle.
 The learning cycle is the optimization approach used by FUSION,
 it changes the behavior of the adaptation cycle.
 Both of these cycles continuously run in parallel to each other.
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Location: FUSION optimizes the Adaptation Control.
     \item Time: FUSION uses both the design and run time to perform optimizations.
     The design time is used to generate an initial model for the learning cycle.
@@ -51,7 +50,7 @@ probabilistic rule learning technique, NoMPRoL, that finds
 hypotheses consisting of new rules specifying the probability
 of an action achieving its specified outcome under particular
 conditions" (Sykes et al., 2013 \cite*{LearningRevisedModels})
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Location: The optimizations focus on the Adaptation Control.
     \item Time: The run time is used to perform optimizations.
     \item Technique: This approach optimizes the adaptation rules and domain models.
@@ -61,15 +60,14 @@ conditions" (Sykes et al., 2013 \cite*{LearningRevisedModels})
     \item Reflective Adaptation Control: This approach generates new adaptation rules.
 \end{itemize}
 
-\newpage
 \subparagraph*{FIoT}
 by Moraes do Nascimento and Pereira, 2016 \cite*{FIoT} is a framework for using agent-based systems
 to construct self-organizing systems for the Internet of Things.
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Location: FIoT optimizes three different levels: The physical, communication and application layer.
     \item Time: FIoT performs its optimizations during the run time of the system.
     \item Technique: FIoT changes the Level, Adaptation Technique and Rules / Policies of a Self-Adaptive System.
     \item Purpose: Generate self-organizing behavior in a Self-Adaptive System.
     \item Approach: FIoT uses a decentralized agent-based approach.
-    \item Reflective Adaptation Control: 
+    \item Reflective Adaptation Control: % TODO:
 \end{itemize}
