--- a/sections/proposal.tex
+++ b/sections/proposal.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Proposal for Classification of Optimization Approaches}
 \label{ch:Proposal}
 
@@ -11,26 +10,23 @@
     \label{fig:MappingOptMAPEK}
 \end{figure}
 
-Using the idea from Weyns et al. 2012 paper FORMS \cite*{FORMS} to compose Self-Adaptive Systems from
+Using the idea from Weyns et al. 2012 paper FORMS \cite*{FORMS} to compose \acrlong{sas}[s] from
 layers of base and reflective components, 
-an Optimization Approach for Self-Adaptive Systems can be thought of
+an Optimization Approach for \acrlong{sas}[s] can be thought of
 as a reflective component in a layer above the Self-Adaptive System. \\
 This allows the application of multiple Optimization Approaches and even the 
 optimization of Optimization Approaches. \\
-It also establishes a connection between Optimization Approaches and Self-Adaptive Systems.
-This leads to the realization that a classification for Optimization Approaches of Self-Adaptive Systems
-should be based upon the same principles as the classifications for Self-Adaptive Systems. \\
-Another benefit is a clear distinction between Self-Adaptive Systems and Optimization Approaches for Self-Adaptive Systems.
-Self-Adaptive Systems and Optimization Approaches are both composed of reflective components and not base components. \\
+It also establishes a connection between Optimization Approaches and \acrlong{sas}[s].
+This leads to the realization that a classification for Optimization Approaches of \acrlong{sas}[s]
+should be based upon the same principles as the classifications for \acrlong{sas}[s]. \\
+Another benefit is a clear distinction between \acrlong{sas}[s] and Optimization Approaches for \acrlong{sas}[s].
+\acrlong{sas}[s] and Optimization Approaches are both composed of reflective components and not base components. \\
 Yet the Self-Adaptive System adapts base components, while the Optimization Approach adapts other reflective components.
-\newline
-\par
 
-
-Just like the adaptation process of Self-Adaptive Systems can be understood using
+\noindent Just like the adaptation process of \acrlong{sas}[s] can be understood using
 the MAPE-K (Monitor-Analyze-Plan-Execute with Knowledge) feedback loop by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
 The process of optimizing a Self-Adaptive System can also be expressed using the MAPE-K feedback loop:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Firstly the optimization approach has to constantly monitor the Self-Adaptive System and its context.
     \item The data gathered from monitoring can then be analyzed to decide wether or not an optimization is necessary and what should be optimized.
     \item After deciding that something should be optimized, there needs to be a plan on how to optimize.
@@ -41,42 +37,35 @@ The process of optimizing a Self-Adaptive System can also be expressed using the
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/ClassificationProposal-WithDimensions.png}
-    \caption{The proposed classification for Optimization Approaches for Self-Adaptive Systems}
+    \caption{The proposed classification for Optimization Approaches for \acrlong{sas}[s]}
     \label{fig:Proposal}
 \end{figure}
 
-Following Krupitzer's et al, 2015 \cite*{SurveyOnEngineeringApproaches} taxonomy for Self-Adaptive Systems,
-a classification for Optimization Approaches of Self-Adaptive Systems should answer 
+\noindent Following Krupitzer's et al, 2015 \cite*{SurveyOnEngineeringApproaches} taxonomy for \acrlong{sas}[s],
+a classification for Optimization Approaches of \acrlong{sas}[s] should answer 
 the 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}.
 These questions are: Where, When, What, Why, Who and How?
-\newline
-\par
 
-
-Figure \ref{fig:Proposal} shows the proposed classification for Optimization Approaches for Self-Adaptive Systems.
+\noindent Figure \ref{fig:Proposal} shows the proposed classification for Optimization Approaches for \acrlong{sas}[s].
 The classification consists of six dimensions: Location, Time, Purpose, Approach, Technique and Reflective Adaptation Control.
 Each dimension is related to one of the 5W+1H questions.
-\newline
-\par
-
 
 \subparagraph*{Location}
 Where in the system is an optimization necessary? \\
 There are three main parts in a Self-Adaptive System that can require optimizations during its lifetime.
 These are:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item The Adaptation Control which can, for example, be optimized by changing or generating new adaptation rules.
     \item The Level on which adaptations are performed.
     \item The Technique that is used to perform adaptations.
 \end{itemize}
 
-\newpage
 \subparagraph*{Time}
 When are optimizations performed? \\
-Similarly to Self-Adaptive Systems, Optimization Approaches can be differentiated by comparing when they perform optimizations.
+Similarly to \acrlong{sas}[s], Optimization Approaches can be differentiated by comparing when they perform optimizations.
 There are three different phases during the lifetime of a Self-Adaptive System where optimizations can occur.
 These are:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item At the runtime of the system, which can also be called the online phase.
     \item During the design time of the system.
     \item While training the system or during its offline phase.
@@ -89,7 +78,7 @@ or when generating a new model for the system by training an updated domain mode
 What gets changed to perform the optimization? \\
 What gets changed in a Self-Adaptive System relates to where an optimization is necessary.
 Thus, the following parts can be changed:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item The Rules / Policies used by the Adaptation Decision Criteria.
     \item The Knowledge of the system, which for example can consist of domain models.
     \item The Adaptation Technique used by the Self-Adaptive System.
@@ -103,7 +92,7 @@ like legal or safety parameters, of which the system has no intrinsic knowledge.
 Why should an optimization occur? \\
 This is perhaps the most important question for any Optimization Approach as it determines if an optimization is necessary.
 There can be several reasons for performing an optimization in a Self-Adaptive System:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item The system learned new information about, for example, its environment and needs to update its domain models.
     \item Due to of external or internal changes, a Goal might not be satisfiable anymore.
     \item The difference of the actual versus the expected outcome of a rule / policy has exceeded a threshold.
@@ -113,12 +102,12 @@ There can be several reasons for performing an optimization in a Self-Adaptive S
 \subparagraph*{Approach}
 Who is responsible for performing the optimization? \\
 The original "Who?" question by Salehie and Tahvildari focuses on the level of human intervention that is need by the system.
-Self-Adaptive Systems have no need for human intervention, because they operate on clearly defined rule sets.
-It is in the nature of Optimization Approaches for Self-Adaptive Systems to change these rule sets.
+\acrlong{sas}[s] have no need for human intervention, because they operate on clearly defined rule sets.
+It is in the nature of Optimization Approaches for \acrlong{sas}[s] to change these rule sets.
 This can lead to problems that make human intervention necessary.
-A result of this is that, in contrast to the the taxonomy for Self-Adaptive Systems, 
+A result of this is that, in contrast to the the taxonomy for \acrlong{sas}[s], 
 the Approach for Optimization Approaches should be its own dimension.
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Is there an internal component that performs changes or are they performed by an external actor.
     \item Which degree of decentralization is used?
     Is each component responsible for itself (fully decentralized), are all components optimized by a central entity (fully centralized)
@@ -133,7 +122,7 @@ an Optimization Approach can also be described by how it applies its optimizatio
 In reference to FORMS by Weyns et al., 2012\cite*{FORMS}, which uses reflective operations to change
 components in the system, the Adaptation Control of the optimization approach will be called Reflective Adaptation Control.
 The Reflective Adaptation Control can be classified by the following behaviors:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Models: The system updates its models after receiving new information about its models.
     \item Rules / Policies: If the system detects, that it is in a state for which an adaptation rule/policy exists,
     it should perform that adaptation.
@@ -141,9 +130,7 @@ The Reflective Adaptation Control can be classified by the following behaviors:
     \item Utility: An adaptation occurs to maximize or minimize a utility function.
 \end{itemize}
 
-\newpage
-
-Because the proposed classification is based upon the MAPE-K feedback loop and the 5W+1H questions,
+\noindent Because the proposed classification is based upon the MAPE-K feedback loop and the 5W+1H questions,
 it is useful to understand how they relate to each other.
 This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
 
@@ -167,7 +154,7 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
         \hline
     \end{tabular}
     \caption{How the MAPE-K feedback loop by Kephart and Chess, 2003\cite*{VisionOfAutonomicComputing}
-    relates to the dimensions of the classification for Optimization Approaches for Self-Adaptive Systems.}
+    relates to the dimensions of the classification for Optimization Approaches for \acrlong{sas}[s].}
     \label{fig:MapeOA}
 \end{figure}
 
@@ -191,6 +178,6 @@ This is depicted in Figures \ref{fig:MapeOA} and \ref{fig:QuestionsOA}.
         \hline
     \end{tabular}
     \caption{How the 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}
-    relate to the dimensions of the classification for Optimization Approaches for Self-Adaptive Systems.}
+    relate to the dimensions of the classification for Optimization Approaches for \acrlong{sas}[s].}
     \label{fig:QuestionsOA}
 \end{figure}
