--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,4 +1,3 @@
-\newpage
 \section{Conclusion}
 \label{ch:Conclusion}
 
@@ -9,11 +8,11 @@
 % - Needs to be applied to more existing approaches
 % - Are there any areas lacking research?
 
-This paper proposed a classification for Optimization Approaches for Self-Adaptive Systems.
-The classification was derived from the same principles as the taxonomy for Self-Adaptive Systems
+This paper proposed a classification for Optimization Approaches for \acrlong{sas}[s].
+The classification was derived from the same principles as the taxonomy for \acrlong{sas}[s]
 by Krupitzer et al., 2015 \cite*{SurveyOnEngineeringApproaches}.
 The main principles that were used to derive the classification are:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item The 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}.
     \item The MAPE-K feedback loop which was created by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
 \end{itemize}
@@ -22,18 +21,15 @@ To classify Optimization Approaches the proposed classification provides six dim
 Location, Time, Purpose, Approach, Technique and Reflective Adaptation Control.
 These are shown in Figure \ref{fig:Proposal}.
 
-The Location dimension asks on which level optimizations in a Self-Adaptive System might be necessary.
+\noindent The Location dimension asks on which level optimizations in a Self-Adaptive System might be necessary.
 Time distinguishes between Optimization Approaches that are performed during the design time of the system,
 during the run time or online phase of the system or approaches that optimize systems during their offline phase.
 The dimension of Purpose provides a reason for Optimizations to be performed.
 Approach determines who is responsible for optimizations
 and Technique states which parts of a Self-Adaptive System can be optimized.
 Lastly, the Reflective Adaptation Control classifies how optimizations are performed.
-\newline
-\par
 
-
-After proposing a classification, it was exemplarily applied to several existing Optimization Approaches.
+\noindent After proposing a classification, it was exemplarily applied to several existing Optimization Approaches.
 This is a part where further research is required. 
 The classification has to be applied to further existing approaches to verify its validity and completeness.
 This would also yield a way to determine areas which require further research.
