--- a/sections/sas_classification.tex
+++ b/sections/sas_classification.tex
@@ -1,18 +1,15 @@
-\newpage
 \section{Classification of Self-Adaptive Systems}
 \label{ch:SASClassification}
 
-There are different approaches on how to classify and describe Self-Adaptive Systems which all focus on different usages.
+There are different approaches on how to classify and describe \acrlong{sas}[s] which all focus on different usages.
 The three approaches that will be highlighted by this paper are:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item FORMS from Weyns et al., 2012 \cite*{FORMS}
     \item Berns and Ghosh, 2009 definition of self-* properties \cite*{DissectingSelfProperties}
-    \item Krupitzer's et al., 2015 taxonomy for Self-Adaptive Systems \cite*{SurveyOnEngineeringApproaches}
+    \item Krupitzer's et al., 2015 taxonomy for \acrlong{sas}[s] \cite*{SurveyOnEngineeringApproaches}
 \end{itemize} 
 These approaches contain ideas that will be used to construct the classification for
-Optimization Approaches for Self-Adaptive Systems in the next chapter.
-\newline
-\par
+Optimization Approaches for \acrlong{sas}[s] in the next chapter.
 
 %% FORMS
 % - reflection
@@ -22,54 +19,49 @@ Optimization Approaches for Self-Adaptive Systems in the next chapter.
     \caption{FORMS primitives by Weyns et al., 2012 \cite*{FORMS}}
     \label{fig:FORMS}
 \end{figure*}
-In their 2012 paper FORMS \cite{FORMS} Weyns et al. propose a formal reference model for describing Self-Adaptive Systems.
-The goal of FORMS is to provide a well defined basis for talking and reasoning about Self-Adaptive Systems.
-This is achieved by providing a definition of FORMS which classifies Self-Adaptive Systems using Z notation.
+\noindent In their 2012 paper FORMS \cite{FORMS} Weyns et al. propose a formal reference model for describing \acrlong{sas}[s].
+The goal of FORMS is to provide a well defined basis for talking and reasoning about \acrlong{sas}[s].
+This is achieved by providing a definition of FORMS which classifies \acrlong{sas}[s] using Z notation.
 By composing a Self-Adaptive System from different levels of components called subsystems,
 where each level can adapt the level beneath, FORMS models the self-adaptive process using reflection.
 The bottom level is populated by base components and domain models.
 On top of these base components are reflective components and reflection models.
 The relation between these component or primitives is depicted in Figure \ref{fig:FORMS}.
-\newline
-\par
 
-
-The concept of different layers of reflection will be useful later to distinguish
-Optimization Approaches for Self-Adaptive Systems from Self-Adaptive Systems.
+\noindent The concept of different layers of reflection will be useful later to distinguish
+Optimization Approaches for \acrlong{sas}[s] from \acrlong{sas}[s].
 
 %% self-* properties
-\newpage
 \begin{figure*}[t!]
     \includegraphics[width=\textwidth]{images/SelfProperties.png}
     \caption{self-* properties by Berns and Ghosh, 2009 \cite*{DissectingSelfProperties}}
     \label{fig:SelfProperties}
 \end{figure*}
-Although some of the first papers on Self-Adaptive Systems, for example, 
+\noindent Although some of the first papers on \acrlong{sas}[s], for example, 
 "The Vision of Autonomic Computing" by Kephart and Chess \cite*{VisionOfAutonomicComputing} focused on self-adaptation,
-there are other aspects of software systems that can benefit from the ideas introduced by Self-Adaptive Systems.
+there are other aspects of software systems that can benefit from the ideas introduced by \acrlong{sas}[s].
 Berns and Ghosh, 2009 \cite*{DissectingSelfProperties} identified and described such aspects which they call self-* properties.
 These self-properties can be seen in Figure \ref{fig:SelfProperties}.
 They are useful to:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Communicate the abilities and goals of a system.
     \item Establish well-defined goals for the system.
 \end{itemize}
 
-These self-* properties show that there are aspects besides the management of software which can benefit from the ideas of Self-Adaptation.
+\noindent These self-* properties show that there are aspects besides the management of software which can benefit from the ideas of Self-Adaptation.
 This will be useful for the proposed classification as it gives a clear setting for the Optimization Approaches to work within.
 % TODO: OA for SAS should only focus on Self-Adaptation, other abilities should be ignored.
 
-\newpage
 \begin{figure*}[t!]
     \includegraphics[width=\textwidth]{images/KrupitzerTaxonomy.jpg}
-    \caption{Taxonomy for Self-Adaptive Systems by Krupitzer et al., 2015 \cite*{SurveyOnEngineeringApproaches}}
+    \caption{Taxonomy for \acrlong{sas}[s] by Krupitzer et al., 2015 \cite*{SurveyOnEngineeringApproaches}}
     \label{fig:KrupitzerTaxonomy}
 \end{figure*}
 
-The taxonomy for Self-Adaptive Systems by Krupitzer's et al., 2015 \cite*{SurveyOnEngineeringApproaches} in Figure \ref{fig:KrupitzerTaxonomy}
+\noindent The taxonomy for \acrlong{sas}[s] by Krupitzer's et al., 2015 \cite*{SurveyOnEngineeringApproaches} in Figure \ref{fig:KrupitzerTaxonomy}
 is based upon the 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}.
 These questions are: Where, When, What, Why, Who and How.
-Each of these questions is responsible for a different aspect of Self-Adaptive Systems and corresponds to a dimension of the taxonomy.
+Each of these questions is responsible for a different aspect of \acrlong{sas}[s] and corresponds to a dimension of the taxonomy.
 
 \subparagraph*{Why}
 First there needs to be a reason for a Self-Adaptive System to adapt. Why an adaptation should be performed is answered by the Reason dimension.
@@ -78,7 +70,7 @@ According to the taxonomy reasons for an adaptation can be changes in either the
 \subparagraph*{Where}
 The question of where asks on which level of the system changes need to occur.
 The different levels on which changes can occur include:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item Different levels of applications from the operating system to a user application.
     \item How systems communicate with each other.
     \item The technical resources that are needed by the system.
@@ -86,7 +78,7 @@ The different levels on which changes can occur include:
 \end{itemize}
 
 \subparagraph*{When}
-While the original When-Question by Salehie and Tahvildari tries to understand all temporal aspects of Self-Adaptive Systems,
+While the original When-Question by Salehie and Tahvildari tries to understand all temporal aspects of \acrlong{sas}[s],
 including how frequently changes should occur and if they happen continously,
 the taxonomy only answers the question when changes should be performed.
 For this purpose the Time dimension differentiates between systems that perform changes proactively or reactively.
@@ -109,25 +101,18 @@ Lastly, after determining the where, when, what, why and by who, there needs to 
 to perform the required changes. This is answered by asking how the changes should be performed
 and corresponds to the Adaptation Control.
 The three main factors of the Adaptation Control are the degree of decentralization, the adaptation decision criteria
-and the approach taken by the system, which divides Self-Adaptive Systems into those where the adaptation logic is part of the application logic
+and the approach taken by the system, which divides \acrlong{sas}[s] into those where the adaptation logic is part of the application logic
 and those with separated adaptation and application logic.
-\newline
-\par
 
-
-After classifying Self-Adaptive Systems the following question can be asked: Which parts of a Self-Adaptive System can be optimized?
+\noindent After classifying \acrlong{sas}[s] the following question can be asked: Which parts of a Self-Adaptive System can be optimized?
 To answer this we will start by looking at which parts can not be optimized or do not benefit from optimization.
-\newline
-\par
 
-The first part that can not be optimized is the environment which provides the Reason dimension.
+\noindent The first part that can not be optimized is the environment which provides the Reason dimension.
 While the environment for a Self-Adaptive System can be chosen in a way which is most beneficial for the system
 and can be influenced by actors,
 the behavior of the systems environment can generally not be controlled completely.
-\newline
-\par
 
-Another dimension of Self-Adaptive Systems that can not be optimized, or is not useful to optimize,
+\noindent Another dimension of \acrlong{sas}[s] that can not be optimized, or is not useful to optimize,
 is the Time dimension. This dimension is mostly a design decision on how the system should behave and be constructed.
 It is also a question of how to handle uncertainty and the level of accepted risk.
 A proactive system can prevent faults and degradation in Quality-of-Service metrics,
@@ -135,47 +120,33 @@ but it can also predict the wrong changes which can lead to a situation where th
 reacting in a way that is contradictive to its goals.
 A reactive system can not prevent faults like a proactive system,
 but its behavior can be much more stable, because it only has to react to a change and not predict that change as well.
-\newline
-\par
 
-Lastly, the question of who is responsible can not be optimized, because the taxonomy simply answers it,
+\noindent Lastly, the question of who is responsible can not be optimized, because the taxonomy simply answers it,
 by referring to the name "Self-Adaptive System" which implies that the system itself is responsible for managing adaptations.
-\newline
-\par
 
-
-The three remaining dimensions can be optimized or can benefit from being adapted dynamically.
+\noindent The three remaining dimensions can be optimized or can benefit from being adapted dynamically.
 These are the Adaptation Control, the Level and the Technique.
-\newline
-\par
 
-The Approach and the Degree of Decentralization used by the Adaptation Control can not be optimized 
+\noindent The Approach and the Degree of Decentralization used by the Adaptation Control can not be optimized 
 because they are design decisions of how the system is built.
 However, the Adaptation Decision Criteria can be optimized. An optimization of the Adaptation Decision Criteria
 could, for example, be to dynamically adapt the rules and policies at runtime to better reflect a changing environment.
-\newline
-\par
 
-Another dimension that can be optimized is the Technique. 
+\noindent Another dimension that can be optimized is the Technique. 
 This can be optimized by changing what gets adapted by the system.
-\newline
-\par
 
-The last dimension that can be optimized is the Level, which can be done by dynamically changing at which level of the system
+\noindent The last dimension that can be optimized is the Level, which can be done by dynamically changing at which level of the system
 adaptations should be performed.
-\newline
-\par
 
-
-This explanation of how Self-Adaptive Systems are classified,
-leads us to how we can classify Optimization Approaches for Self-Adaptive Systems.
+\noindent This explanation of how \acrlong{sas}[s] are classified,
+leads us to how we can classify Optimization Approaches for \acrlong{sas}[s].
 The main concepts that will be used for the classification of Optimization Approaches are:
-\begin{itemize}
+\begin{itemize}[nosep]
     \item The concept of reflectiveness as a way to model self-adaptation.
     \item The 5W+1H questions to determine how a Self-Adaptive System operates.
-    \item The MAPE-K feedback loop a general base for understanding Self-Adaptive Systems.
+    \item The MAPE-K feedback loop a general base for understanding \acrlong{sas}[s].
     \item The concept of self-* properties which enables us to differentiate between self-adaptation
     and other self-* abilities.
-    \item A taxonomy for Self-Adaptive Systems which will be the basis for the proposed classification of Optimization Approaches,
-    because Self-Adaptive Systems are so closely related to their Optimization Approaches.
+    \item A taxonomy for \acrlong{sas}[s] which will be the basis for the proposed classification of Optimization Approaches,
+    because \acrlong{sas}[s] are so closely related to their Optimization Approaches.
 \end{itemize}
